# gpt-app

./: pyproject.toml
chatgpt-popup/: manifest.json
chatgpt-popup/popup/: popup.css  popup.html  popup.js
chatgpt-popup/scripts/: background.js  contentScript.js
prompts/: youtube_summary.toml
pyscripts/: youtube_summary.py  youtube_transcript.py
pyscripts/utils/: toml_loader.py
