[tool.poetry]
name = "my-chrome-extensions"
version = "0.1.0"
description = ""
authors = ["ayumu <ayumu4bus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
youtube-transcript-api = "^0.6.2"
openai = "^1.41.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
